# decorator_pydantic

./: README.md  main.py  pyproject.toml
